--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 	<div>
 		李广的网站
 	</div>
+	<script type="text/javascript">
+		window.location.href='app/dist/index.html'
+		
+	</script>
 </body>
 </html>
