--- a/backups/app/index.html
+++ b/backups/app/index.html
@@ -4,16 +4,16 @@
       margin: 0;
       padding: 0;
       font-family:kaiti;
-      touch-action: none; 
+      /* touch-action: none; */
       /* font-weight:500; */
     }
 
-    @font-face {
+    /* @font-face {
       font-family: "kaiti";
       src: url("static/css/kaiti.ttf") format("truetype");
       font-weight: normal;
       font-style: normal;
-    }</style><link href=./static/css/app.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript>/*获取页面宽度  进行修改项目根字体大小 进行页面适配*/
+    } */</style><link href=./static/css/app.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript>/*获取页面宽度  进行修改项目根字体大小 进行页面适配*/
     var width = document.documentElement.offsetWidth;
     var height = document.documentElement.clientHeight;
     // 得到默认fontsize
@@ -41,21 +41,21 @@
         event.preventDefault();
       });
 
-      var startY, endY;
-      //记录手指触摸的起点坐标
-      $('body').on('touchstart', function (e) {
-        startY = e.touches[0].pageY;
-      });
-      $('body').on('touchmove', function (e) {
-        endY = e.touches[0].pageY; //记录手指触摸的移动中的坐标
-        //手指下滑，页面到达顶端不能继续下滑
-        if (endY > startY && $(window).scrollTop() <= 0) {
-          e.preventDefault();
-        }
-        //手指上滑，页面到达底部能继续上滑
-        if (endY < startY && $(window).scrollTop() +
-          $(window).height() >= $('body')[0].scrollHeight) {
-          e.preventDefault();
-        }
-      })
-    }</script><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.58906d71a26532ce7a7a.js></script><script type=text/javascript src=./static/js/app.ba1dc915e1c7376f1bc4.js></script></body></html>
+      // var startY, endY;
+      // //记录手指触摸的起点坐标
+      // $('body').on('touchstart', function (e) {
+      //   startY = e.touches[0].pageY;
+      // });
+      // $('body').on('touchmove', function (e) {
+      //   endY = e.touches[0].pageY; //记录手指触摸的移动中的坐标
+      //   //手指下滑，页面到达顶端不能继续下滑
+      //   if (endY > startY && $(window).scrollTop() <= 0) {
+      //     e.preventDefault();
+      //   }
+      //   //手指上滑，页面到达底部能继续上滑
+      //   if (endY < startY && $(window).scrollTop() +
+      //     $(window).height() >= $('body')[0].scrollHeight) {
+      //     e.preventDefault();
+      //   }
+      // })
+    }</script><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.f109437f6794ea857e47.js></script><script type=text/javascript src=./static/js/app.449febe714809c896b81.js></script></body></html>
