--- a/home/index.html
+++ b/home/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>人偶的华尔兹</title>
-    <script type="module" crossorigin src="/static/js/index-fb138e74.js"></script>
-    <link rel="stylesheet" href="/static/css/index-c17bee10.css">
+    <script type="module" crossorigin src="./static/js/index-fb138e74.js"></script>
+    <link rel="stylesheet" href="./static/css/index-c17bee10.css">
   </head>
   <body>
     <div id="root"></div>
